[package]
name = "lilygo-t3s3-epaper"
version = "0.1.0"
edition = "2024"

# the library is pure embedded-hal, so it stays platform-agnostic and testable.
[dependencies]
embedded-hal = "1.0"

# the esp32-s3 platform glue is only needed to build and run the examples.
[dev-dependencies]
esp-hal = { version = "1.1", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.19", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.17", features = ["esp32s3"] }
embedded-hal-bus = "0.3"

# esp-hal strongly recommends building dependencies with optimizations even in dev.
[profile.dev.package.esp-hal]
opt-level = 3

[profile.dev]
opt-level = "s"
