[package]
name = "lilygo-t3s3-epaper"
version = "0.1.0"
edition = "2024"

# the library is pure embedded-hal, so it stays platform-agnostic and testable.
[dependencies]
embedded-hal = "1.0"
embedded-graphics-core = "0.4"

# the esp32-s3 platform glue is only needed to build and run the examples.
[dev-dependencies]
# esp-hal 1.0.0 has a full-duplex-after-half-duplex SPI bug (esp-rs/esp-hal#3122)
# that breaks SX1262 register reads; fixed by #3176 in 1.1.x — require >= 1.1.
esp-hal = { version = "1.1", features = ["esp32s3", "unstable"] }
esp-bootloader-esp-idf = { version = "0.5", features = ["esp32s3"] }
esp-backtrace = { version = "0.19", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.17", features = ["esp32s3", "log-04"] }
embedded-hal-bus = "0.3"
embedded-graphics = "0.8"

# ble stack for the `ble` example. these versions are a matched set: the radio
# half (esp-radio) and the host half (trouble-host) must agree on the bt-hci
# version they bridge through, or the ExternalController<BleConnector> won't
# satisfy trouble's Controller trait. esp-radio 0.18 and trouble-host 0.6 both
# build on bt-hci 0.8; esp-radio 0.18 + esp-rtos 0.3 are the esp-hal 1.1 line.
esp-radio = { version = "0.18", features = ["esp32s3", "ble", "unstable", "log-04"] }
esp-rtos = { version = "0.3", features = ["esp32s3", "embassy", "esp-radio", "esp-alloc"] }
esp-alloc = "0.10"
embassy-executor = "0.10"
embassy-time = "0.5"
embassy-futures = "0.1"
# the trouble-host gatt_server/gatt_service macros expand to `embassy_sync::...`
# paths, so it must be a direct dependency (same 0.7 line trouble-host uses).
embassy-sync = "0.7"
static_cell = "2"
trouble-host = { version = "0.6", features = ["default-packet-pool-mtu-255"] }
# must match the heapless that trouble-host 0.6 uses, or its AsGatt impl for
# Vec<u8, N> won't apply to ours (two heapless versions = two distinct types).
heapless = "0.9"

# esp-hal strongly recommends building dependencies with optimizations even in dev.
[profile.dev.package.esp-hal]
opt-level = 3

[profile.dev]
opt-level = "s"
